Fixes list spacing

--- a/RichEditorView/Assets/editor/style.css
+++ b/RichEditorView/Assets/editor/style.css
@@ -130,8 +130,7 @@ h6 {
 
 ul,
 ol {
-  padding-left: 0;
-  list-style-position: inside;
+  padding-left: 23px;
 }
 
 /* ul {
